packages/forge-dsl/fixtures/errors/e10-list-op.fable
// expect: FORGE303
VAR coins = 5

-> pouch
=== pouch ===
{coins has 3: Yes.|No.}
-> END
